# fluid_sim_with_AI

./: .gitignore  README.md  pyproject.toml
docs/: incompressible_navier_stokes_ai.md
fluid_ai_sim/: __init__.py  compare_incompressible_modes.py  compare_modes.py  data.py  diagnostics.py  incompressible.py  plotting.py  render.py  simulate.py  solver.py  surrogate.py  train_incompressible_surrogate.py  train_surrogate.py
runs/: surrogate.pt
runs/ai_demo/: trajectory.npz
runs/ai_demo/frames/: frame_000.ppm  frame_002.ppm  frame_003.ppm  frame_006.ppm  frame_008.ppm  frame_010.ppm  frame_011.ppm  frame_013.ppm  frame_016.ppm  frame_018.ppm  frame_019.ppm  frame_021.ppm  frame_022.ppm  frame_023.ppm
runs/compare_smoke/: comparison_metrics.npz
runs/compare_smoke/ai/: diagnostics.csv  diagnostics.json  metadata.json  trajectory.npz
runs/compare_smoke/hybrid/: diagnostics.csv  metadata.json
runs/compare_smoke/solver/: diagnostics.csv  diagnostics.json  metadata.json  trajectory.npz
runs/diag_smoke/: diagnostics.csv
runs/diag_smoke_2/: metadata.json
runs/fluid_runs_backup/: smoke_surrogate.pt
runs/fluid_runs_backup/ai_demo/: metadata.json
runs/hybrid_demo/: metadata.json  trajectory.npz
runs/smoke_ai/: diagnostics.csv  diagnostics.json  metadata.json  trajectory.npz
runs/smoke_solver/: metadata.json  trajectory.npz
runs/solver_demo/: metadata.json
tests/: test_diagnostics.py  test_incompressible.py  test_solver.py  test_surrogate.py
tools/: generate_acceleration_experiment_plot.py  generate_fno_vs_stride_plot.py  generate_readme_speed_plot.py
(+141 files in other folders)
