[project]
name = "fluid-ai-sim"
version = "0.1.0"
description = "Hybrid Navier-Stokes simulator with a neural fast-rollout surrogate."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
]

[project.scripts]
fluid-sim = "fluid_ai_sim.simulate:main"
fluid-train = "fluid_ai_sim.train_surrogate:main"

[tool.setuptools.packages.find]
include = ["fluid_ai_sim*"]
